--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Solid App</title>
+    <title>gasoline</title>
   </head>
   <body class="bg-slate-700 text-slate-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
